--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -7,7 +7,7 @@
       </div>
 
       <div class="links-footer">
-        <a href="/student/addStudent">
+        <a href="https://github.com/prateeksha9/getPlaced.git">
           <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTFSIO_dsJJiOX3Sntwxpw6lUIJKI0ueBlRpcQ3q57xVOw4-bCAQ2eX0v_5v2sf5CIiNA&usqp=CAU"
             alt="github"
