--- a/views/edit_student.ejs
+++ b/views/edit_student.ejs
@@ -8,6 +8,7 @@
         required
       /> -->
       <h2><%= student.name%></h2>
+      <h2>Email which has to be entered in Email field is <storng><%= student.email%></strong>. </h2>
     </div>
     <div class="form-input">
       <input
