--- a/views/edit_student.ejs
+++ b/views/edit_student.ejs
@@ -8,7 +8,7 @@
         required
       /> -->
       <h2><%= student.name%></h2>
-     
+     <span>Student's email Id to be entered in first input field : <%= student.email%></span>
     </div>
     <div class="form-input">
       <input
